force-app/main/default/objects/Disty_Brand_Relationship__c/Disty_Brand_Relationship__c.object-meta.xml
<CustomObject>
    <label>Disty Brand Relationship</label>
    <nameField>
        <displayFormat>DBR-{00000}</displayFormat>
        <label>Disty Brand Relationship #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disty Brand Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>