force-app/main/default/objects/Disty_Brand_Relationship__c/fields/Agent_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fee__c</fullName>
    <label>Agent Fee</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>