force-app/main/default/objects/Disty_Brand_Relationship__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Disty Brand Relationships</relationshipLabel>
    <relationshipName>Disty_Brand_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>