force-app/main/default/objects/Disty_Brand_Relationship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Disty Brand Relationships</relationshipLabel>
    <relationshipName>Disty_Brand_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>